Bug 1671171 - [devtools] Improve vertical layout display for new performance panel r=julienw
Differential Revision: https://phabricator.services.mozilla.com/D123724

UltraBlame original commit: 2733988278a2f208c89162e11eb5b162d8579e2b

--- a/devtools/client/themes/perf.css
+++ b/devtools/client/themes/perf.css
@@ -153,12 +153,15 @@ perf
 -
 devtools
 {
-width
+box
+-
+sizing
 :
-100
-%
+border
+-
+box
 ;
-height
+width
 :
 100
 %
@@ -166,6 +169,18 @@ height
 position
 :
 absolute
+;
+margin
+-
+top
+:
+10vh
+;
+padding
+-
+inline
+:
+5vh
 ;
 }
 .
@@ -230,24 +245,6 @@ align
 items
 :
 center
-;
-}
-.
-perf
--
-devtools
-.
-perf
--
-button
--
-container
-{
-margin
--
-top
-:
-65px
 ;
 }
 .
@@ -986,6 +983,18 @@ display
 :
 flex
 ;
+flex
+-
+direction
+:
+column
+;
+row
+-
+gap
+:
+10px
+;
 width
 :
 100
@@ -1502,33 +1511,6 @@ auto
 ;
 /
 *
-Compensate
-some
-of
-the
-65px
-margin
--
-top
-set
-on
-.
-perf
--
-button
--
-container
-*
-/
-margin
--
-bottom
-:
--
-50px
-;
-/
-*
 Override
 the
 max
@@ -1554,6 +1536,23 @@ width
 :
 100
 %
+;
+}
+.
+perf
+-
+onboarding
++
+.
+perf
+-
+devtools
+{
+margin
+-
+top
+:
+15px
 ;
 }
 .
