Bug 1727935 - Use the same focus border implementation for the address bar and search bar. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D123864

UltraBlame original commit: 4e3667b642ab2a44e46583a3ac61eeca5c243998

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -461,8 +461,14 @@ border
 urlbar
 -
 background
+#
+searchbar
+:
+focus
+-
+within
 {
-border
+outline
 :
 var
 (
@@ -471,6 +477,27 @@ var
 focus
 -
 outline
+)
+;
+outline
+-
+offset
+:
+calc
+(
+var
+(
+-
+-
+focus
+-
+outline
+-
+width
+)
+*
+-
+1
 )
 ;
 /
@@ -539,7 +566,7 @@ value
 .
 *
 /
-border
+outline
 -
 color
 :
@@ -557,6 +584,12 @@ border
 -
 color
 )
+;
+border
+-
+color
+:
+transparent
 ;
 }
 #
@@ -640,151 +673,6 @@ rgba
 .
 13
 )
-;
-}
-/
-*
-We
-draw
-the
-searchbar
-'
-s
-border
-as
-an
-outline
-.
-If
-we
-did
-it
-as
-a
-border
-the
-searchbar
-'
-s
-contents
-would
-shift
-when
-its
-border
--
-width
-expanded
-by
-1px
-when
-focused
-.
-Removing
-the
-border
-when
-focused
-would
-also
-shift
-contents
-.
-#
-urlbar
-gets
-around
-this
-problem
-by
-applying
-its
-border
-to
-#
-urlbar
--
-background
-which
-is
-positioned
-absolutely
-.
-We
-don
-'
-t
-plan
-on
-changing
-the
-searchbar
-'
-s
-UX
-significantly
-so
-it
-'
-s
-better
-to
-avoid
-that
-extra
-complexity
-.
-*
-/
-#
-searchbar
-:
-focus
--
-within
-{
-outline
-:
-var
-(
--
--
-focus
--
-outline
-)
-;
-outline
--
-offset
-:
--
-2px
-;
-outline
--
-color
-:
-var
-(
--
--
-toolbar
--
-field
--
-focus
--
-border
--
-color
-)
-;
-border
--
-color
-:
-transparent
 ;
 }
 #
