Bug 1727907 - Make Firefox Suggest an opt-in feature and update the onboarding dialog accordingly. r=daleharvey
Differential Revision: https://phabricator.services.mozilla.com/D123852

UltraBlame original commit: f13f4915b43cdda28bc5be44af022cd287edaed8

--- a/browser/components/urlbar/content/quicksuggestOnboarding.xhtml
+++ b/browser/components/urlbar/content/quicksuggestOnboarding.xhtml
@@ -259,7 +259,6 @@ buttons
 "
 accept
 extra1
-extra2
 "
 defaultButton
 =
@@ -343,6 +342,32 @@ infoContainer
 "
 >
 <
+div
+id
+=
+"
+notNowLinkContainer
+"
+>
+<
+a
+id
+=
+"
+onboardingNotNow
+"
+>
+Not
+now
+<
+/
+a
+>
+<
+/
+div
+>
+<
 xul
 :
 image
@@ -361,24 +386,11 @@ id
 infoTitle
 "
 >
-Firefox
-is
-getting
-<
-span
-class
-=
-"
-zap
-short
-"
->
+Say
+hello
+to
 smarter
-.
-<
-/
-span
->
+suggestions
 <
 /
 h2
@@ -393,39 +405,58 @@ id
 infoBody
 "
 >
-We
-'
-re
-rolling
-out
-experiences
+Firefox
+Suggest
+uses
+your
+city
+location
+and
+search
+keywords
 to
-help
-you
-find
-the
-right
-things
-faster
-.
-You
-'
-ll
-start
-to
-see
-richer
-recommendations
+make
+contextual
+suggestions
+from
+Firefox
+and
+partners
+while
+keeping
+your
+privacy
 in
-the
-address
-bar
+mind
 .
+<
+a
+id
+=
+"
+onboardingLearnMore
+"
+>
+Learn
+more
+<
+/
+a
+>
 <
 /
 xul
 :
 description
+>
+<
+div
+id
+=
+"
+illustration
+"
+/
 >
 <
 div
@@ -439,11 +470,6 @@ infoButtons
 xul
 :
 button
-id
-=
-"
-onboardingAccept
-"
 dlgtype
 =
 "
@@ -452,27 +478,15 @@ accept
 label
 =
 "
-Okay
-got
-it
-!
+Allow
+suggestions
 "
->
-<
 /
-xul
-:
-button
 >
 <
 xul
 :
 button
-id
-=
-"
-onboardingDisable
-"
 dlgtype
 =
 "
@@ -481,41 +495,11 @@ extra1
 label
 =
 "
-Disable
+Customize
+in
+settings
 "
->
-<
 /
-xul
-:
-button
->
-<
-xul
-:
-button
-id
-=
-"
-onboardingLearnMore
-"
-dlgtype
-=
-"
-extra2
-"
-label
-=
-"
-Learn
-more
-"
->
-<
-/
-xul
-:
-button
 >
 <
 /
