--- a/browser/components/urlbar/content/quicksuggestOnboarding.css
+++ b/browser/components/urlbar/content/quicksuggestOnboarding.css
@@ -74,17 +74,23 @@ width
 padding
 :
 1em
-0
+;
+}
+a
+{
+cursor
+:
+pointer
 ;
 }
 #
-infoTitle
+notNowLinkContainer
 {
-font
+text
 -
-size
+align
 :
-24px
+end
 ;
 }
 #
@@ -100,8 +106,9 @@ height
 ;
 margin
 :
-1em
+0
 auto
+1em
 ;
 background
 -
@@ -134,191 +141,63 @@ size
 %
 ;
 }
-/
-*
-Copied
-from
-https
-:
-/
-/
-searchfox
-.
-org
-/
-mozilla
--
-central
-/
-source
-/
-browser
-/
-components
-/
-newtab
-/
-aboutwelcome
-/
-content
-/
-aboutwelcome
-.
-css
 #
-88
-*
-/
-/
-*
-We
-will
-want
-to
-check
-in
-to
-figure
-out
-if
-we
-want
-to
-share
-this
-code
-somehow
-*
-/
-span
-.
-zap
+infoTitle
 {
-position
-:
-relative
-;
-z
--
-index
-:
-1
-;
-white
--
-space
-:
-nowrap
-;
-}
-.
-zap
-:
-:
-after
-{
-display
-:
-block
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
+font
 -
 size
 :
-100
-%
-100
-%
-;
-content
-:
-'
-'
-;
-position
-:
-absolute
-;
-top
-:
-calc
-(
-100
-%
--
-0
-.
-15em
-)
-;
-width
-:
-100
-%
-;
-height
-:
-0
-.
-3em
-;
-left
-:
-0
-;
-z
--
-index
-:
--
 1
+.
+5em
+;
+margin
+:
+0
 ;
 }
-.
-zap
-.
-short
+#
+infoBody
+{
+margin
 :
-:
-after
+1em
+0
+;
+}
+#
+illustration
 {
 background
--
-image
 :
 url
 (
-'
-chrome
-:
-/
-/
-activity
--
-stream
-/
-content
-/
-data
-/
-content
-/
-assets
-/
-short
--
-zap
+"
+quicksuggestOnboarding_illustration
 .
 svg
-'
+"
 )
+no
+-
+repeat
+center
+;
+min
+-
+width
+:
+455px
+;
+height
+:
+219px
+;
+margin
+:
+1em
+0
+2em
 ;
 }
