Backed out changeset 4e3667b642ab (bug 1727935) for causing mochitest failures in browser_ext_themes_toolbar_fields_focus
UltraBlame original commit: 1bca6d242f6ce618163710be6232b7073eacd3fa

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -461,14 +461,8 @@ border
 urlbar
 -
 background
-#
-searchbar
-:
-focus
--
-within
 {
-outline
+border
 :
 var
 (
@@ -477,27 +471,6 @@ var
 focus
 -
 outline
-)
-;
-outline
--
-offset
-:
-calc
-(
-var
-(
--
--
-focus
--
-outline
--
-width
-)
-*
--
-1
 )
 ;
 /
@@ -566,7 +539,7 @@ value
 .
 *
 /
-outline
+border
 -
 color
 :
@@ -584,12 +557,6 @@ border
 -
 color
 )
-;
-border
--
-color
-:
-transparent
 ;
 }
 #
@@ -673,6 +640,151 @@ rgba
 .
 13
 )
+;
+}
+/
+*
+We
+draw
+the
+searchbar
+'
+s
+border
+as
+an
+outline
+.
+If
+we
+did
+it
+as
+a
+border
+the
+searchbar
+'
+s
+contents
+would
+shift
+when
+its
+border
+-
+width
+expanded
+by
+1px
+when
+focused
+.
+Removing
+the
+border
+when
+focused
+would
+also
+shift
+contents
+.
+#
+urlbar
+gets
+around
+this
+problem
+by
+applying
+its
+border
+to
+#
+urlbar
+-
+background
+which
+is
+positioned
+absolutely
+.
+We
+don
+'
+t
+plan
+on
+changing
+the
+searchbar
+'
+s
+UX
+significantly
+so
+it
+'
+s
+better
+to
+avoid
+that
+extra
+complexity
+.
+*
+/
+#
+searchbar
+:
+focus
+-
+within
+{
+outline
+:
+var
+(
+-
+-
+focus
+-
+outline
+)
+;
+outline
+-
+offset
+:
+-
+2px
+;
+outline
+-
+color
+:
+var
+(
+-
+-
+toolbar
+-
+field
+-
+focus
+-
+border
+-
+color
+)
+;
+border
+-
+color
+:
+transparent
 ;
 }
 #
