Bug 1609558 - Migrate panelUI.inc.xhtml to Fluent. r=mtigley,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D123837

UltraBlame original commit: 29ade839896bb828ecd55a5c19ea3e053348255e

--- a/browser/components/customizableui/content/panelUI.inc.xhtml
+++ b/browser/components/customizableui/content/panelUI.inc.xhtml
@@ -621,27 +621,22 @@ context
 -
 moveToToolbar
 "
-accesskey
+data
+-
+l10n
+-
+id
 =
 "
-&
-customizeMenu
-.
-unpinFromOverflowMenu
-.
-accesskey
-;
-"
-label
-=
-"
-&
-customizeMenu
-.
-unpinFromOverflowMenu
-.
-label
-;
+customize
+-
+menu
+-
+unpin
+-
+from
+-
+overflowmenu
 "
 /
 >
@@ -838,28 +833,44 @@ vbox
 >
 <
 description
->
-&
-panicButton
-.
+data
+-
+l10n
+-
+id
+=
+"
+panic
+-
+button
+-
 thankyou
-.
+-
 msg1
-;
+"
+>
 <
 /
 description
 >
 <
 description
->
-&
-panicButton
-.
+data
+-
+l10n
+-
+id
+=
+"
+panic
+-
+button
+-
 thankyou
-.
+-
 msg2
-;
+"
+>
 <
 /
 description
@@ -874,17 +885,6 @@ hbox
 >
 <
 button
-label
-=
-"
-&
-panicButton
-.
-thankyou
-.
-buttonlabel
-;
-"
 id
 =
 "
@@ -895,6 +895,21 @@ button
 success
 -
 closebutton
+"
+data
+-
+l10n
+-
+id
+=
+"
+panic
+-
+button
+-
+thankyou
+-
+button
 "
 oncommand
 =
@@ -1936,27 +1951,22 @@ context
 -
 addToToolbar
 "
-accesskey
+data
+-
+l10n
+-
+id
 =
 "
-&
-customizeMenu
-.
-addToToolbar
-.
-accesskey
-;
-"
-label
-=
-"
-&
-customizeMenu
-.
-addToToolbar
-.
-label
-;
+customize
+-
+menu
+-
+add
+-
+to
+-
+toolbar
 "
 /
 >
@@ -1990,70 +2000,22 @@ context
 -
 addToPanel
 "
-accesskey
-=
-"
-&
-customizeMenu
-.
-addToOverflowMenu
-.
-accesskey
-;
-"
-label
-=
-"
-&
-customizeMenu
-.
-addToOverflowMenu
-.
-label
-;
-"
-/
->
-<
-/
-menupopup
->
-<
-menupopup
+data
+-
+l10n
+-
 id
 =
 "
-customizationPanelContextMenu
-"
->
-<
-menuitem
-command
-=
-"
-cmd_CustomizeToolbars
-"
-accesskey
-=
-"
-&
-customizeMenu
-.
-addMoreItems
-.
-accesskey
-;
-"
-label
-=
-"
-&
-customizeMenu
-.
-addMoreItems
-.
-label
-;
+customize
+-
+menu
+-
+add
+-
+to
+-
+overflowmenu
 "
 /
 >
