Bug 1724230 - rely on flexbox instead of manual positioning for network/cert error page layout and fix warning icon going off-screen, r=johannh
Differential Revision: https://phabricator.services.mozilla.com/D122913

UltraBlame original commit: 2520566ff8668db3ad579e3d991354e7d55b170f

--- a/browser/themes/shared/error-pages.css
+++ b/browser/themes/shared/error-pages.css
@@ -461,45 +461,6 @@ start
 ;
 }
 }
-/
-*
-For
-small
-window
-height
-shift
-the
-stripes
-up
-by
-10px
-.
-*
-We
-could
-just
-change
-the
-background
-size
-but
-that
-changes
-*
-the
-angle
-of
-the
-stripes
-so
-just
-shifting
-up
-is
-easier
-.
-*
-/
 media
 only
 screen
@@ -514,14 +475,36 @@ height
 {
 body
 {
-background
--
-position
+/
+*
+Note
 :
-10px
--
-10px
-;
+if
+you
+change
+the
+top
+padding
+also
+update
+the
+image
+positioning
+*
+media
+query
+in
+aboutNetError
+.
+css
+for
+the
+certificate
+error
+case
+.
+*
+/
 padding
 -
 top
