--- a/browser/themes/shared/aboutNetError.css
+++ b/browser/themes/shared/aboutNetError.css
@@ -156,12 +156,6 @@ width
 100
 %
 ;
-justify
--
-content
-:
-normal
-;
 }
 body
 .
@@ -591,6 +585,10 @@ width
 :
 100
 %
+;
+position
+:
+absolute
 ;
 left
 :
@@ -1237,6 +1235,61 @@ top
 -
 60px
 ;
+}
+/
+*
+Reduce
+the
+negative
+margin
+on
+small
+viewport
+sizes
+to
+avoid
+exceeding
+the
+*
+38px
+body
+vertical
+padding
+error
+-
+pages
+.
+css
+sets
+leaving
+8px
+space
+:
+*
+/
+media
+(
+max
+-
+height
+:
+480px
+)
+{
+body
+.
+certerror
+.
+title
+{
+margin
+-
+top
+:
+-
+30px
+;
+}
 }
 body
 .
