Bug 1712219 - Downloads toolbar button badge behavior improvements. r=Gijs
This patch addresses two points where the badge on the download status toolbar
button's badge was not quite meeting the MR1 design spec:

1) The badge for the "uncommon download" safe browsing verdict should be "info"
   (currently a blue circle) and not "warning" (a yellow triangle).
2) The badge (regardless of its type) should not appear while the "finished"
   animation is playing, only after it completes.

Differential Revision: https://phabricator.services.mozilla.com/D123818

UltraBlame original commit: d334373c35b88032cce6b3bdb0a8aa5cad68caa1

--- a/browser/themes/shared/downloads/indicator.inc.css
+++ b/browser/themes/shared/downloads/indicator.inc.css
@@ -790,6 +790,29 @@ button
 attention
 =
 "
+info
+"
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+stack
+>
+.
+toolbarbutton
+-
+badge
+#
+downloads
+-
+button
+[
+attention
+=
+"
 warning
 "
 ]
@@ -903,6 +926,75 @@ background
 size
 :
 12px
+;
+}
+#
+downloads
+-
+button
+[
+attention
+=
+"
+info
+"
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+stack
+>
+.
+toolbarbutton
+-
+badge
+{
+background
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+notification
+-
+fill
+-
+12
+.
+svg
+)
+no
+-
+repeat
+center
+;
+fill
+:
+var
+(
+-
+-
+panel
+-
+banner
+-
+item
+-
+info
+-
+icon
+-
+bgcolor
+)
 ;
 }
 #
@@ -1041,6 +1133,48 @@ color
 #
 E22850
 )
+;
+}
+#
+downloads
+-
+button
+[
+animate
+]
+>
+.
+toolbarbutton
+-
+badge
+-
+stack
+>
+.
+toolbarbutton
+-
+badge
+{
+/
+*
+Don
+'
+t
+display
+the
+badge
+until
+after
+the
+animation
+has
+cleared
+.
+*
+/
+display
+:
+none
 ;
 }
 /
