Bug 1705200 - Improve contrast on the download details "blocked" text. r=desktop-theme-reviewers,dao
This bug was originally about changing the size of this text, but we aren't
really able to do that. We are however able to improve its legibility by giving
it some additional contrast against the background.

Based on the specs (and also on intuition, to be honest), I believe only the
"normal" download status text should be getting any reduced opacity, and the
error message states should not. So this patch undoes the opacity reduction in
the error states.

Differential Revision: https://phabricator.services.mozilla.com/D123659

UltraBlame original commit: a5a18fe5fd512ff085d0c83b2ec6c5ec21b16174

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -338,6 +338,39 @@ color
 #
 C50042
 ;
+/
+*
+The
+details
+text
+usually
+gets
+an
+opacity
+reduction
+but
+for
+the
+error
+states
+we
+disable
+that
+because
+it
+would
+reduce
+the
+contrast
+too
+much
+.
+*
+/
+opacity
+:
+inherit
+;
 }
 :
 root
