Bug 1710918 - Update download panel progressbar styling. r=harry,desktop-theme-reviewers
* Resize progress bar to 4px to match spec, rounding the ends of the bar and its tray
* Define and use a set of CSS variables for the progressbar tray color, bar fill and paused fill
* Use the theme's icon attention color for the main progressbar color - when defined - to match the download indicator in the toolbar
* Use a --download-progress-flare-color variable for the highlight color in the indeterminate download animation, which lets us invert the colors in a selected item.
* Remove exceptions/overrides for windows and osx
* Match colors where possible in Places and about:downloads, ensuring we always have contrast in selected download richlistitems

Differential Revision: https://phabricator.services.mozilla.com/D122543

UltraBlame original commit: cb24192713ff8e795d102cc6bcf6e1feaeca918e

--- a/browser/themes/shared/downloads/progressmeter.inc.css
+++ b/browser/themes/shared/downloads/progressmeter.inc.css
@@ -68,6 +68,262 @@ progressmeter
 *
 *
 /
+:
+root
+{
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+:
+-
+moz
+-
+accent
+-
+color
+;
+-
+-
+download
+-
+progress
+-
+paused
+-
+color
+:
+GrayText
+;
+-
+-
+download
+-
+progress
+-
+flare
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+75
+)
+;
+}
+/
+*
+download
+progress
+bar
+is
+used
+in
+contexts
+which
+are
+not
+LightweightThemeConsumers
+and
+do
+not
+get
+the
+lwt
+-
+theme
+variables
+.
+So
+we
+duplicate
+the
+fallbacks
+here
+.
+*
+/
+:
+root
+:
+-
+moz
+-
+lwtheme
+{
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbarbutton
+-
+icon
+-
+fill
+-
+attention
+rgb
+(
+0
+97
+224
+)
+)
+;
+}
+media
+(
+-
+moz
+-
+toolbar
+-
+prefers
+-
+color
+-
+scheme
+:
+dark
+)
+{
+:
+root
+{
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbarbutton
+-
+icon
+-
+fill
+-
+attention
+rgb
+(
+0
+221
+255
+)
+)
+;
+}
+#
+contentAreaDownloadsView
+{
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+item
+-
+selected
+)
+;
+}
+}
+:
+root
+[
+lwt
+-
+popup
+-
+brighttext
+]
+panel
+toolbar
+[
+brighttext
+]
+:
+-
+moz
+-
+lwtheme
+{
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbarbutton
+-
+icon
+-
+fill
+-
+attention
+rgb
+(
+0
+221
+255
+)
+)
+;
+}
 /
 *
 *
@@ -172,10 +428,11 @@ moz
 box
 ;
 margin
+-
+block
 :
-4px
-0
-0
+5px
+1px
 ;
 margin
 -
@@ -187,19 +444,92 @@ end
 ;
 border
 :
-1px
-solid
-ButtonShadow
+none
 ;
 height
 :
-6px
+4px
+;
+border
+-
+radius
+:
+2px
 ;
 background
 -
 color
 :
-ButtonFace
+color
+-
+mix
+(
+in
+srgb
+currentColor
+15
+%
+transparent
+)
+;
+}
+/
+*
+Ensure
+we
+have
+contrast
+in
+selected
+download
+items
+*
+/
+#
+downloadsRichListBox
+richlistitem
+[
+selected
+]
+.
+downloadProgress
+:
+:
+-
+moz
+-
+progress
+-
+bar
+{
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+:
+currentColor
+;
+-
+-
+download
+-
+progress
+-
+flare
+-
+color
+:
+-
+moz
+-
+accent
+-
+color
 ;
 }
 .
@@ -221,7 +551,24 @@ background
 -
 color
 :
-Highlight
+var
+(
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+)
+;
+border
+-
+radius
+:
+2px
 ;
 }
 .
@@ -242,7 +589,18 @@ background
 -
 color
 :
-GrayText
+var
+(
+-
+-
+download
+-
+progress
+-
+paused
+-
+color
+)
 ;
 }
 .
@@ -282,7 +640,7 @@ gradient
 with
 2
 identical
-pattern
+patterns
 and
 enlarge
 the
@@ -305,9 +663,19 @@ percentage
 *
 /
 background
--
-image
 :
+var
+(
+-
+-
+download
+-
+progress
+-
+fill
+-
+color
+)
 linear
 -
 gradient
@@ -316,28 +684,34 @@ gradient
 transparent
 0
 %
-rgba
+var
 (
-255
-255
-255
-0
-.
-5
+-
+-
+download
+-
+progress
+-
+flare
+-
+color
 )
 25
 %
 transparent
 50
 %
-rgba
+var
 (
-255
-255
-255
-0
-.
-5
+-
+-
+download
+-
+progress
+-
+flare
+-
+color
 )
 75
 %
@@ -352,7 +726,7 @@ blend
 -
 mode
 :
-lighten
+normal
 ;
 background
 -
