Backed out changeset cb24192713ff (bug 1710918) for causing bc failures on browser_parsable_css.js. CLOSED TREE
UltraBlame original commit: b50d04b3a0a5f1db17f5cf5f62765323cd2cf579

--- a/browser/themes/osx/downloads/downloads.css
+++ b/browser/themes/osx/downloads/downloads.css
@@ -199,6 +199,47 @@ offset
 2px
 ;
 }
+.
+downloadProgress
+:
+:
+-
+moz
+-
+progress
+-
+bar
+{
+background
+-
+color
+:
+#
+3c9af8
+;
+}
+.
+downloadProgress
+[
+paused
+]
+:
+:
+-
+moz
+-
+progress
+-
+bar
+{
+background
+-
+color
+:
+#
+a6a6a6
+;
+}
 /
 *
 *
