--- a/browser/themes/shared/downloads/progressmeter.inc.css
+++ b/browser/themes/shared/downloads/progressmeter.inc.css
@@ -68,262 +68,6 @@ progressmeter
 *
 *
 /
-:
-root
-{
--
--
-download
--
-progress
--
-fill
--
-color
-:
--
-moz
--
-accent
--
-color
-;
--
--
-download
--
-progress
--
-paused
--
-color
-:
-GrayText
-;
--
--
-download
--
-progress
--
-flare
--
-color
-:
-rgba
-(
-255
-255
-255
-0
-.
-75
-)
-;
-}
-/
-*
-download
-progress
-bar
-is
-used
-in
-contexts
-which
-are
-not
-LightweightThemeConsumers
-and
-do
-not
-get
-the
-lwt
--
-theme
-variables
-.
-So
-we
-duplicate
-the
-fallbacks
-here
-.
-*
-/
-:
-root
-:
--
-moz
--
-lwtheme
-{
--
--
-download
--
-progress
--
-fill
--
-color
-:
-var
-(
--
--
-lwt
--
-toolbarbutton
--
-icon
--
-fill
--
-attention
-rgb
-(
-0
-97
-224
-)
-)
-;
-}
-media
-(
--
-moz
--
-toolbar
--
-prefers
--
-color
--
-scheme
-:
-dark
-)
-{
-:
-root
-{
--
--
-download
--
-progress
--
-fill
--
-color
-:
-var
-(
--
--
-lwt
--
-toolbarbutton
--
-icon
--
-fill
--
-attention
-rgb
-(
-0
-221
-255
-)
-)
-;
-}
-#
-contentAreaDownloadsView
-{
--
--
-download
--
-progress
--
-fill
--
-color
-:
-var
-(
--
--
-in
--
-content
--
-item
--
-selected
-)
-;
-}
-}
-:
-root
-[
-lwt
--
-popup
--
-brighttext
-]
-panel
-toolbar
-[
-brighttext
-]
-:
--
-moz
--
-lwtheme
-{
--
--
-download
--
-progress
--
-fill
--
-color
-:
-var
-(
--
--
-lwt
--
-toolbarbutton
--
-icon
--
-fill
--
-attention
-rgb
-(
-0
-221
-255
-)
-)
-;
-}
 /
 *
 *
@@ -428,11 +172,10 @@ moz
 box
 ;
 margin
--
-block
 :
-5px
-1px
+4px
+0
+0
 ;
 margin
 -
@@ -444,92 +187,19 @@ end
 ;
 border
 :
-none
+1px
+solid
+ButtonShadow
 ;
 height
 :
-4px
-;
-border
--
-radius
-:
-2px
+6px
 ;
 background
 -
 color
 :
-color
--
-mix
-(
-in
-srgb
-currentColor
-15
-%
-transparent
-)
-;
-}
-/
-*
-Ensure
-we
-have
-contrast
-in
-selected
-download
-items
-*
-/
-#
-downloadsRichListBox
-richlistitem
-[
-selected
-]
-.
-downloadProgress
-:
-:
--
-moz
--
-progress
--
-bar
-{
--
--
-download
--
-progress
--
-fill
--
-color
-:
-currentColor
-;
--
--
-download
--
-progress
--
-flare
--
-color
-:
--
-moz
--
-accent
--
-color
+ButtonFace
 ;
 }
 .
@@ -551,24 +221,7 @@ background
 -
 color
 :
-var
-(
--
--
-download
--
-progress
--
-fill
--
-color
-)
-;
-border
--
-radius
-:
-2px
+Highlight
 ;
 }
 .
@@ -589,18 +242,7 @@ background
 -
 color
 :
-var
-(
--
--
-download
--
-progress
--
-paused
--
-color
-)
+GrayText
 ;
 }
 .
@@ -640,7 +282,7 @@ gradient
 with
 2
 identical
-patterns
+pattern
 and
 enlarge
 the
@@ -663,19 +305,9 @@ percentage
 *
 /
 background
+-
+image
 :
-var
-(
--
--
-download
--
-progress
--
-fill
--
-color
-)
 linear
 -
 gradient
@@ -684,34 +316,28 @@ gradient
 transparent
 0
 %
-var
+rgba
 (
--
--
-download
--
-progress
--
-flare
--
-color
+255
+255
+255
+0
+.
+5
 )
 25
 %
 transparent
 50
 %
-var
+rgba
 (
--
--
-download
--
-progress
--
-flare
--
-color
+255
+255
+255
+0
+.
+5
 )
 75
 %
@@ -726,7 +352,7 @@ blend
 -
 mode
 :
-normal
+lighten
 ;
 background
 -
