--- a/browser/themes/windows/downloads/downloads.css
+++ b/browser/themes/windows/downloads/downloads.css
@@ -191,6 +191,73 @@ outline
 none
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+/
+*
+Use
+unified
+color
+for
+the
+progressbar
+on
+default
+theme
+*
+/
+.
+downloadProgress
+:
+:
+-
+moz
+-
+progress
+-
+bar
+{
+background
+-
+color
+:
+#
+3c9af8
+;
+}
+.
+downloadProgress
+[
+paused
+]
+:
+:
+-
+moz
+-
+progress
+-
+bar
+{
+background
+-
+color
+:
+#
+a6a6a6
+;
+}
+}
 /
 *
 *
