Bug 1728190 - Center the icons in buttons in about:third-party r=tkikuchi
Differential Revision: https://phabricator.services.mozilla.com/D123973

UltraBlame original commit: f334c708a9b8df5ce0f5a373bde32feb7e36d0eb

--- a/toolkit/components/aboutthirdparty/content/aboutThirdParty.css
+++ b/toolkit/components/aboutthirdparty/content/aboutThirdParty.css
@@ -123,11 +123,120 @@ svg
 -
 button
 {
+height
+:
+32px
+;
+width
+:
+32px
+;
 min
 -
 width
 :
-auto
+0
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+position
+:
+center
+;
+}
+.
+button
+-
+open
+-
+dir
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+folder
+.
+svg
+)
+;
+}
+.
+button
+-
+expand
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+arrow
+-
+down
+.
+svg
+)
+;
+}
+.
+button
+-
+collapse
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+arrow
+-
+up
+.
+svg
+)
 ;
 }
 .
