Bug 1728368 - Simplify findbar overflow behavior. r=emalysz
Differential Revision: https://phabricator.services.mozilla.com/D124086

UltraBlame original commit: f6e3c384468ada5af73a9d3a597b12bfc730ec99

--- a/toolkit/themes/shared/findbar.css
+++ b/toolkit/themes/shared/findbar.css
@@ -253,17 +253,21 @@ height
 :
 28px
 ;
-min
--
-width
+overflow
 :
-calc
-(
-100vw
--
-48px
-)
+hidden
 ;
+/
+*
+Ensures
+the
+close
+button
+stays
+visible
+.
+*
+/
 }
 /
 *
@@ -1554,18 +1558,6 @@ Close
 button
 *
 /
-#
-findbar
--
-close
--
-container
-{
-position
-:
-relative
-;
-}
 /
 *
 Increase
