Bug 1714478 - go back to using 'edit' and 'delete' for bookmark menus, r=mak,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D124045

UltraBlame original commit: faee833c5198eacc435cebfb48069531fd4511d6

--- a/browser/components/places/content/placesContextMenu.inc.xhtml
+++ b/browser/components/places/content/placesContextMenu.inc.xhtml
@@ -656,7 +656,7 @@ places
 -
 edit
 -
-folder
+folder2
 "
 node
 -
@@ -683,7 +683,7 @@ id
 "
 places
 -
-remove
+delete
 -
 bookmark
 "
@@ -739,7 +739,7 @@ id
 "
 places
 -
-remove
+delete
 -
 folder
 "
