--- a/toolkit/components/passwordmgr/test/mochitest/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_prompt.html
@@ -1272,6 +1272,16 @@ true
 passHidden
 :
 false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
+:
+false
 focused
 :
 "
@@ -1436,6 +1446,16 @@ true
 passHidden
 :
 false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
+:
+false
 focused
 :
 "
@@ -1581,6 +1601,16 @@ textHidden
 :
 true
 passHidden
+:
+false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
 :
 false
 focused
@@ -1843,6 +1873,16 @@ textHidden
 :
 true
 passHidden
+:
+false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
 :
 false
 focused
@@ -2472,6 +2512,16 @@ true
 passHidden
 :
 false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
+:
+false
 focused
 :
 "
@@ -2645,6 +2695,16 @@ true
 passHidden
 :
 false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
+:
+false
 focused
 :
 "
@@ -2797,6 +2857,16 @@ textHidden
 :
 false
 passHidden
+:
+false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
 :
 false
 focused
@@ -2983,6 +3053,16 @@ false
 passHidden
 :
 false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
+:
+false
 focused
 :
 "
@@ -3137,6 +3217,24 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
+checkMsg
+:
+"
+Use
+Password
+Manager
+to
+remember
+this
+password
+.
+"
+checked
+:
+true
 focused
 :
 "
@@ -3332,6 +3430,24 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
+checkMsg
+:
+"
+Use
+Password
+Manager
+to
+remember
+this
+password
+.
+"
+checked
+:
+true
 focused
 :
 "
@@ -3539,6 +3655,24 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
+checkMsg
+:
+"
+Use
+Password
+Manager
+to
+remember
+this
+password
+.
+"
+checked
+:
+true
 focused
 :
 "
@@ -3724,6 +3858,24 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
+checkMsg
+:
+"
+Use
+Password
+Manager
+to
+remember
+this
+password
+.
+"
+checked
+:
+true
 focused
 :
 "
@@ -3901,6 +4053,24 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
+checkMsg
+:
+"
+Use
+Password
+Manager
+to
+remember
+this
+password
+.
+"
+checked
+:
+true
 focused
 :
 "
@@ -4089,6 +4259,24 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
+checkMsg
+:
+"
+Use
+Password
+Manager
+to
+remember
+this
+password
+.
+"
+checked
+:
+true
 focused
 :
 "
@@ -4283,6 +4471,16 @@ textHidden
 :
 false
 passHidden
+:
+false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
 :
 false
 focused
@@ -4483,6 +4681,16 @@ textHidden
 :
 false
 passHidden
+:
+false
+checkHidden
+:
+true
+checkMsg
+:
+"
+"
+checked
 :
 false
 focused
