--- a/toolkit/components/prompts/test/test_modal_prompts.html
+++ b/toolkit/components/prompts/test/test_modal_prompts.html
@@ -3109,6 +3109,9 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -3119,6 +3122,17 @@ passValue
 "
 ssh
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -3139,6 +3153,9 @@ buttonClick
 "
 ok
 "
+setCheckbox
+:
+true
 textField
 :
 "
@@ -3175,6 +3192,12 @@ value
 ssh
 "
 ;
+checkVal
+.
+value
+=
+false
+;
 promptArgs
 =
 [
@@ -3207,6 +3230,21 @@ passVal
 value
 :
 passVal
+"
+Check
+me
+out
+!
+"
+util
+.
+useAsync
+?
+checkVal
+.
+value
+:
+checkVal
 ]
 ;
 result
@@ -3289,6 +3327,27 @@ value
 "
 )
 ;
+is
+(
+util
+.
+useAsync
+?
+result
+.
+checked
+:
+checkVal
+.
+value
+true
+"
+expected
+checkbox
+setting
+"
+)
+;
 await
 promptDone
 ;
@@ -3349,6 +3408,9 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -3359,6 +3421,17 @@ passValue
 "
 ssh
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -3379,6 +3452,9 @@ buttonClick
 "
 cancel
 "
+setCheckbox
+:
+true
 textField
 :
 "
@@ -3415,6 +3491,12 @@ value
 ssh
 "
 ;
+checkVal
+.
+value
+=
+false
+;
 promptArgs
 =
 [
@@ -3447,6 +3529,21 @@ passVal
 value
 :
 passVal
+"
+Check
+me
+out
+!
+"
+util
+.
+useAsync
+?
+checkVal
+.
+value
+:
+checkVal
 ]
 ;
 result
@@ -3551,6 +3648,27 @@ value
 "
 )
 ;
+ok
+(
+util
+.
+useAsync
+?
+result
+.
+checked
+:
+!
+checkVal
+.
+value
+"
+expected
+checkbox
+setting
+"
+)
+;
 await
 promptDone
 ;
@@ -3611,6 +3729,9 @@ true
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -3620,6 +3741,17 @@ passValue
 "
 ssh
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -3640,6 +3772,9 @@ buttonClick
 "
 ok
 "
+setCheckbox
+:
+true
 passField
 :
 "
@@ -3662,6 +3797,12 @@ value
 "
 ssh
 "
+;
+checkVal
+.
+value
+=
+false
 ;
 promptArgs
 =
@@ -3686,6 +3827,21 @@ passVal
 value
 :
 passVal
+"
+Check
+me
+out
+!
+"
+util
+.
+useAsync
+?
+checkVal
+.
+value
+:
+checkVal
 ]
 ;
 result
@@ -3744,6 +3900,27 @@ value
 "
 )
 ;
+is
+(
+util
+.
+useAsync
+?
+result
+.
+checked
+:
+checkVal
+.
+value
+true
+"
+expected
+checkbox
+setting
+"
+)
+;
 await
 promptDone
 ;
@@ -3804,6 +3981,9 @@ true
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -3813,6 +3993,17 @@ passValue
 "
 ssh
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -3833,6 +4024,9 @@ buttonClick
 "
 cancel
 "
+setCheckbox
+:
+true
 passField
 :
 "
@@ -3855,6 +4049,12 @@ value
 "
 ssh
 "
+;
+checkVal
+.
+value
+=
+false
 ;
 promptArgs
 =
@@ -3879,6 +4079,21 @@ passVal
 value
 :
 passVal
+"
+Check
+me
+out
+!
+"
+util
+.
+useAsync
+?
+checkVal
+.
+value
+:
+checkVal
 ]
 ;
 result
@@ -3945,6 +4160,27 @@ checking
 expected
 pass
 value
+"
+)
+;
+ok
+(
+util
+.
+useAsync
+?
+result
+.
+checked
+:
+!
+checkVal
+.
+value
+"
+expected
+checkbox
+setting
 "
 )
 ;
@@ -5785,6 +6021,9 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -5793,6 +6032,17 @@ passValue
 :
 "
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -5813,6 +6063,9 @@ buttonClick
 "
 ok
 "
+setCheckbox
+:
+true
 textField
 :
 "
@@ -5846,12 +6099,25 @@ state
 action
 )
 ;
+checkVal
+.
+value
+=
+false
+;
 promptArgs
 =
 [
 channel
 level
 authinfo
+"
+Check
+me
+out
+!
+"
+checkVal
 ]
 ;
 isOK
@@ -5905,6 +6171,19 @@ password
 checking
 filled
 password
+"
+)
+;
+is
+(
+checkVal
+.
+value
+true
+"
+expected
+checkbox
+setting
 "
 )
 ;
@@ -6047,6 +6326,9 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -6055,6 +6337,17 @@ passValue
 :
 "
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -6075,6 +6368,9 @@ buttonClick
 "
 ok
 "
+setCheckbox
+:
+true
 textField
 :
 "
@@ -6107,6 +6403,12 @@ handlePrompt
 state
 action
 )
+;
+checkVal
+.
+value
+=
+false
 ;
 var
 longString
@@ -6167,6 +6469,13 @@ promptArgs
 channel
 level
 authinfo
+"
+Check
+me
+out
+!
+"
+checkVal
 ]
 ;
 isOK
@@ -6220,6 +6529,19 @@ password
 checking
 filled
 password
+"
+)
+;
+is
+(
+checkVal
+.
+value
+true
+"
+expected
+checkbox
+setting
 "
 )
 ;
@@ -6401,6 +6723,9 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -6409,6 +6734,17 @@ passValue
 :
 "
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -6429,6 +6765,9 @@ buttonClick
 "
 ok
 "
+setCheckbox
+:
+false
 textField
 :
 "
@@ -6462,12 +6801,25 @@ state
 action
 )
 ;
+checkVal
+.
+value
+=
+false
+;
 promptArgs
 =
 [
 channel
 level
 authinfo
+"
+Check
+me
+out
+!
+"
+checkVal
 ]
 ;
 isOK
@@ -6521,6 +6873,19 @@ password
 checking
 filled
 password
+"
+)
+;
+is
+(
+checkVal
+.
+value
+false
+"
+expected
+checkbox
+setting
 "
 )
 ;
@@ -6625,6 +6990,9 @@ false
 passHidden
 :
 false
+checkHidden
+:
+false
 textValue
 :
 "
@@ -6633,6 +7001,17 @@ passValue
 :
 "
 "
+checkMsg
+:
+"
+Check
+me
+out
+!
+"
+checked
+:
+false
 focused
 :
 "
@@ -6653,6 +7032,9 @@ buttonClick
 "
 ok
 "
+setCheckbox
+:
+false
 textField
 :
 "
@@ -6686,12 +7068,25 @@ state
 action
 )
 ;
+checkVal
+.
+value
+=
+false
+;
 promptArgs
 =
 [
 channel
 level
 authinfo
+"
+Check
+me
+out
+!
+"
+checkVal
 ]
 ;
 isOK
@@ -6745,6 +7140,19 @@ password
 checking
 filled
 password
+"
+)
+;
+is
+(
+checkVal
+.
+value
+false
+"
+expected
+checkbox
+setting
 "
 )
 ;
