Backed out changeset 28a0487d0291 (bug 1693222) for reftest failure on themed-widget.html. CLOSED TREE
UltraBlame original commit: 358ce9525a988b8fd9d175fae125ee5b53747794

--- a/browser/components/search/content/contentSearchUI.css
+++ b/browser/components/search/content/contentSearchUI.css
@@ -366,11 +366,11 @@ background
 -
 color
 :
-SelectedItem
+Highlight
 ;
 color
 :
-SelectedItemText
+HighlightText
 ;
 }
 .
@@ -661,7 +661,7 @@ background
 -
 color
 :
-SelectedItem
+Highlight
 ;
 background
 -
