--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -894,7 +894,11 @@ system
 -
 color
 (
-Highlight
+text
+-
+select
+-
+background
 light
 )
 )
@@ -921,7 +925,11 @@ system
 -
 color
 (
-HighlightText
+text
+-
+select
+-
+foreground
 light
 )
 )
@@ -1069,7 +1077,11 @@ system
 -
 color
 (
-Highlight
+text
+-
+select
+-
+background
 dark
 )
 )
@@ -1096,7 +1108,11 @@ system
 -
 color
 (
-HighlightText
+text
+-
+select
+-
+foreground
 dark
 )
 )
@@ -1208,7 +1224,11 @@ system
 -
 color
 (
-HighlightText
+text
+-
+select
+-
+foreground
 dark
 )
 )
@@ -2512,17 +2532,17 @@ background
 -
 color
 :
-SelectedItem
+Highlight
 ;
 outline
 -
 color
 :
-SelectedItem
+Highlight
 ;
 color
 :
-SelectedItemText
+HighlightText
 ;
 }
 #
