--- a/browser/themes/shared/urlbarView.inc.css
+++ b/browser/themes/shared/urlbarView.inc.css
@@ -161,7 +161,7 @@ highlight
 -
 background
 :
-SelectedItem
+Highlight
 ;
 -
 -
@@ -173,7 +173,7 @@ highlight
 -
 color
 :
-SelectedItemText
+HighlightText
 ;
 -
 -
