--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -2274,19 +2274,23 @@ background
 -
 color
 :
-text
 -
-select
+moz
 -
-background
+html
 -
-disabled
+cellhighlight
 !
 important
 ;
 color
 :
-SelectedItemText
+-
+moz
+-
+html
+-
+cellhighlighttext
 !
 important
 ;
@@ -2312,7 +2316,13 @@ background
 -
 color
 :
-SelectedItem
+Highlight
+!
+important
+;
+color
+:
+HighlightText
 !
 important
 ;
