--- a/toolkit/themes/shared/findbar.css
+++ b/toolkit/themes/shared/findbar.css
@@ -647,7 +647,11 @@ system
 -
 color
 (
-Higlight
+text
+-
+select
+-
+background
 light
 )
 )
@@ -674,7 +678,11 @@ system
 -
 color
 (
-HighlightText
+text
+-
+select
+-
+foreground
 light
 )
 )
@@ -784,7 +792,11 @@ system
 -
 color
 (
-Higlight
+text
+-
+select
+-
+background
 dark
 )
 )
@@ -811,7 +823,11 @@ system
 -
 color
 (
-HighlightText
+text
+-
+select
+-
+foreground
 dark
 )
 )
@@ -900,7 +916,11 @@ system
 -
 color
 (
-HighlightText
+text
+-
+select
+-
+foreground
 dark
 )
 )
