--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -747,13 +747,13 @@ true
 {
 background
 :
-SelectedItem
+Highlight
 !
 important
 ;
 color
 :
-SelectedItemText
+HighlightText
 !
 important
 ;
@@ -1425,7 +1425,7 @@ highlight
 -
 background
 :
-SelectedItem
+Highlight
 ;
 -
 -
@@ -1437,7 +1437,7 @@ highlight
 -
 color
 :
-SelectedItemText
+HighlightText
 ;
 }
 /
