--- a/browser/themes/windows/webRTC-indicator.css
+++ b/browser/themes/windows/webRTC-indicator.css
@@ -348,7 +348,7 @@ background
 -
 color
 :
-SelectedItem
+Highlight
 ;
 -
 -
@@ -362,7 +362,7 @@ icon
 -
 fill
 :
-SelectedItemText
+HighlightText
 ;
 -
 -
