Bug 1853323 - Remove browser.underline_anchors. r=settings-reviewers,mconley
This is weirdly placed in the colors dialog, and adds a global selector
to the UA sheet for no great reason.

This sub-setting doesn't really make a lot of sense. We don't let you
force underlines in any way, so any site CSS will override it (unlike
colors, where you can actually override the site).

Just move this to the UA sheet properly.

Differential Revision: https://phabricator.services.mozilla.com/D188326

UltraBlame original commit: 8eaf1c80eff21e939d6a6d00eaf5ce34150636fb

--- a/layout/svg/svg.css
+++ b/layout/svg/svg.css
@@ -721,3 +721,30 @@ select
 none
 ;
 }
+a
+:
+any
+-
+link
+{
+/
+*
+We
+don
+'
+t
+want
+SVG
+link
+to
+be
+underlined
+*
+/
+text
+-
+decoration
+:
+none
+;
+}
