Bug 1851097 - Remove layout.css.moz-document.content.enabled pref r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D187349

UltraBlame original commit: 3d17db9fd49f37e00735456090b476fa22c5801c

--- a/layout/style/test/chrome/test_bug511909.html
+++ b/layout/style/test/chrome/test_bug511909.html
@@ -72,6 +72,13 @@ script
 src
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -103,6 +110,13 @@ css
 href
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -112,6 +126,7 @@ test
 .
 css
 "
+/
 >
 <
 style
@@ -578,38 +593,6 @@ function
 (
 )
 {
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-"
-layout
-.
-css
-.
-moz
--
-document
-.
-content
-.
-enabled
-"
-true
-]
-]
-}
-function
-(
-)
-{
 /
 /
 Ensure
@@ -974,8 +957,6 @@ finish
 (
 )
 ;
-}
-)
 }
 )
 ;
