--- a/layout/style/test/chrome/test_moz_document_serialization.html
+++ b/layout/style/test/chrome/test_moz_document_serialization.html
@@ -47,6 +47,13 @@ script
 src
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -78,6 +85,13 @@ css
 href
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -424,38 +438,6 @@ waitForExplicitFinish
 (
 )
 ;
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-"
-layout
-.
-css
-.
-moz
--
-document
-.
-content
-.
-enabled
-"
-true
-]
-]
-}
-function
-(
-)
-{
 var
 style
 =
@@ -645,8 +627,6 @@ finish
 (
 )
 ;
-}
-)
 <
 /
 script
