--- a/toolkit/content/widgets/message-bar.css
+++ b/toolkit/content/widgets/message-bar.css
@@ -2293,3 +2293,27 @@ display
 none
 ;
 }
+keyframes
+spin
+{
+from
+{
+transform
+:
+rotate
+(
+0
+)
+;
+}
+to
+{
+transform
+:
+rotate
+(
+360deg
+)
+;
+}
+}
