Bug 1851902 - Add final illustrations to shopping. r=shopping-reviewers,desktop-theme-reviewers,kpatenio,dao
Differential Revision: https://phabricator.services.mozilla.com/D188112

UltraBlame original commit: b07e991d82263c8ce5eb4eb9e82c8bcaecac6fbc

--- a/browser/components/shopping/content/unanalyzed.css
+++ b/browser/components/shopping/content/unanalyzed.css
@@ -115,28 +115,72 @@ product
 -
 icon
 {
-/
-*
-TODO
+width
 :
-icon
-chrome
+264px
+;
+height
+:
+290px
+;
+content
+:
 url
-*
+(
+"
+chrome
+:
 /
-fill
-:
-currentColor
+/
+browser
+/
+content
+/
+shopping
+/
+assets
+/
+unanalyzedLight
+.
+avif
+"
+)
 ;
+media
+(
+prefers
 -
-moz
+color
 -
-context
--
-properties
+scheme
 :
-fill
+dark
+)
+{
+content
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+shopping
+/
+assets
+/
+unanalyzedDark
+.
+avif
+"
+)
 ;
+}
 }
 #
 unanalyzed
