Bug 1851611 - Update unanalyzed shopping card. r=shopping-reviewers,fluent-reviewers,desktop-theme-reviewers,kpatenio,flod,dao
Differential Revision: https://phabricator.services.mozilla.com/D188267

UltraBlame original commit: 330a48f1b6ad46d41bf24c85a6cc8aeb2d4621b5

--- a/browser/components/shopping/content/unanalyzed.css
+++ b/browser/components/shopping/content/unanalyzed.css
@@ -229,13 +229,12 @@ product
 -
 analysis
 -
-link
+button
 {
-font
--
-weight
+width
 :
-600
+100
+%
 ;
 }
 #
@@ -246,14 +245,6 @@ product
 message
 -
 content
-#
-unanalyzed
--
-product
--
-analysis
--
-link
 {
 line
 -
