Bug 1848708 - Convert all Glean Metric types to webidl. r=nika,janerik,perry.mcmanis,application-update-reviewers,nalexander
Though these are in essence plain objects that need no refcounting,
the presence of a NamedGetter on GleanLabeled means we need to register
everything with the wrappercache.

Paths not taken:
* Making a common utility for Maybe<T> -> dom::Nullable<T>
* GleanEvent::Record taking a dictionary instead of object
* TimerId as opaque Web IDL
* GleanDatetime accept JS Date as well as return it

(( Should make decent follow-ups ))

Differential Revision: https://phabricator.services.mozilla.com/D186267

UltraBlame original commit: 06061d509ab5b26077889743b33cc8d9bc274b08

--- a/toolkit/components/glean/build_scripts/glean_parser_ext/templates/js.jinja2
+++ b/toolkit/components/glean/build_scripts/glean_parser_ext/templates/js.jinja2
@@ -570,12 +570,15 @@ types
 ;
 already_AddRefed
 <
-nsISupports
+GleanMetric
 >
 NewMetricFromId
 (
 uint32_t
 id
+nsISupports
+*
+aParent
 )
 {
 uint32_t
@@ -666,6 +669,7 @@ type_id
 endif
 %
 }
+aParent
 )
 ;
 }
@@ -834,7 +838,7 @@ GIFFT
 /
 already_AddRefed
 <
-nsISupports
+GleanMetric
 >
 NewSubMetricFromIds
 (
@@ -849,6 +853,9 @@ aLabel
 uint32_t
 *
 aSubmetricId
+nsISupports
+*
+aParent
 )
 {
 switch
@@ -876,6 +883,25 @@ items
 %
 }
 {
+#
+TODO
+:
+Remove
+the
+subtype
+inclusion
+clause
+when
+we
+suport
+the
+rest
+of
+labeled_
+*
+#
+}
+{
 %
 if
 subtype_name
@@ -883,6 +909,20 @@ subtype_name
 length
 >
 0
+and
+original_type
+in
+[
+'
+labeled_boolean
+'
+'
+labeled_counter
+'
+'
+labeled_string
+'
+]
 %
 }
 case
@@ -937,6 +977,7 @@ subtype_name
 >
 (
 id
+aParent
 )
 ;
 }
