--- a/toolkit/components/glean/build_scripts/glean_parser_ext/templates/js_h.jinja2
+++ b/toolkit/components/glean/build_scripts/glean_parser_ext/templates/js_h.jinja2
@@ -131,6 +131,19 @@ h
 #
 include
 "
+mozilla
+/
+glean
+/
+bindings
+/
+GleanMetric
+.
+h
+"
+#
+include
+"
 nsStringFwd
 .
 h
@@ -311,12 +324,15 @@ uint64_t
 ;
 already_AddRefed
 <
-nsISupports
+GleanMetric
 >
 NewMetricFromId
 (
 uint32_t
 id
+nsISupports
+*
+aParent
 )
 ;
 /
@@ -455,7 +471,7 @@ GIFFT
 /
 already_AddRefed
 <
-nsISupports
+GleanMetric
 >
 NewSubMetricFromIds
 (
@@ -470,6 +486,9 @@ aLabel
 uint32_t
 *
 aSubmetricId
+nsISupports
+*
+aParent
 )
 ;
 /
