Bug 1851612 - Update stale analysis shopping message bar. r=shopping-reviewers,fluent-reviewers,flod,kpatenio
Differential Revision: https://phabricator.services.mozilla.com/D188287

UltraBlame original commit: f43c9ca9502f4416c3326e15bf290dcc3e41cfd3

--- a/browser/components/shopping/content/shopping-message-bar.css
+++ b/browser/components/shopping/content/shopping-message-bar.css
@@ -122,6 +122,64 @@ margin
 0
 ;
 }
+:
+host
+(
+[
+type
+=
+"
+stale
+"
+]
+)
+#
+message
+-
+bar
+-
+container
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+row
+;
+gap
+:
+8px
+;
+>
+:
+is
+(
+span
+button
+)
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+align
+-
+self
+:
+center
+;
+}
+}
 button
 {
 margin
@@ -286,7 +344,31 @@ part
 (
 container
 )
+:
+host
+(
+[
+type
+=
+stale
+]
+)
+message
+-
+bar
+:
+:
+part
+(
+container
+)
 {
+align
+-
+items
+:
+center
+;
 background
 -
 color
