Bug 1838393 - [devtools] Tweak paused thread styling. r=devtools-reviewers,bomsy.
Instead of only displaying a small icon when the thread is
paused, add a plain text paused label.
When a thread is paused and not selected, set its background
and color the same as we have for the why paused element.

CSS variables for paused background and color are created and
are used in both WhyPaused and paused thread.

We take this opportunity to refactor Threads.css a bit, cleaning
up spacing and using CSS nesting to make it easier to read.

Differential Revision: https://phabricator.services.mozilla.com/D189341

UltraBlame original commit: d17297618424c47052180c28bcfb4d6cc19af316

--- a/devtools/client/debugger/src/components/SecondaryPanes/Threads.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/Threads.css
@@ -148,14 +148,11 @@ items
 :
 center
 ;
-}
-.
-threads
--
-list
->
-.
-thread
+gap
+:
+4px
+;
+&
 :
 hover
 {
@@ -175,15 +172,57 @@ semitransparent
 )
 ;
 }
-.
-threads
--
-list
->
-.
-thread
+&
 .
 selected
+{
+background
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
+&
+.
+img
+{
+background
+-
+color
+:
+currentColor
+;
+}
+}
+&
+.
+paused
+:
+not
+(
+.
+selected
+)
 {
 background
 -
@@ -193,15 +232,25 @@ var
 (
 -
 -
-tab
+paused
 -
-line
--
-selected
+background
 -
 color
 )
 ;
+color
+:
+var
+(
+-
+-
+paused
+-
+color
+)
+;
+}
 }
 .
 threads
@@ -213,14 +262,6 @@ icon
 flex
 :
 none
-;
-margin
--
-inline
--
-end
-:
-4px
 ;
 }
 .
@@ -290,68 +331,10 @@ flex
 :
 none
 ;
-margin
+font
 -
-inline
--
-start
+weight
 :
-4px
-;
-}
-.
-threads
--
-list
->
-.
-thread
-.
-selected
-{
-background
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
-;
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-color
-)
-;
-}
-.
-threads
--
-list
->
-.
-thread
-.
-selected
-.
-img
-{
-background
--
-color
-:
-currentColor
+bold
 ;
 }
