--- a/devtools/client/debugger/src/components/SecondaryPanes/WhyPaused.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/WhyPaused.css
@@ -100,13 +100,15 @@ background
 -
 color
 :
-hsl
+var
 (
-54
-100
-%
-92
-%
+-
+-
+paused
+-
+background
+-
+color
 )
 ;
 color
@@ -115,9 +117,7 @@ var
 (
 -
 -
-theme
--
-body
+paused
 -
 color
 )
@@ -241,44 +241,6 @@ padding
 right
 :
 4px
-;
-}
-.
-theme
--
-dark
-.
-secondary
--
-panes
-.
-why
--
-paused
-{
-background
--
-color
-:
-hsl
-(
-42
-37
-%
-19
-%
-)
-;
-color
-:
-hsl
-(
-43
-94
-%
-81
-%
-)
 ;
 }
 .
