--- a/devtools/client/debugger/src/components/SecondaryPanes/SecondaryPanes.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/SecondaryPanes.css
@@ -124,6 +124,79 @@ space
 :
 36px
 ;
+-
+-
+paused
+-
+background
+-
+color
+:
+hsl
+(
+54
+100
+%
+92
+%
+)
+;
+-
+-
+paused
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+.
+theme
+-
+dark
+&
+{
+-
+-
+paused
+-
+background
+-
+color
+:
+hsl
+(
+42
+37
+%
+19
+%
+)
+;
+-
+-
+paused
+-
+color
+:
+hsl
+(
+43
+94
+%
+81
+%
+)
+;
+}
 }
 .
 secondary
