Bug 1966359 - Use HiDPI icons for GTK dialogs. r=desktop-theme-reviewers,dao
And use the non-deprecated names for these icons, which actually work
with the new moz-icon:// implementation.

Differential Revision: https://phabricator.services.mozilla.com/D249247

UltraBlame original commit: 47c70fd468ada3ba8fb7847318439ad678ed79d9

--- a/browser/themes/linux/sanitizeDialog.css
+++ b/browser/themes/linux/sanitizeDialog.css
@@ -104,7 +104,9 @@ style
 -
 image
 :
-url
+image
+-
+set
 (
 "
 moz
@@ -115,16 +117,37 @@ icon
 /
 stock
 /
-gtk
--
 dialog
 -
 warning
 ?
 size
 =
-dialog
+48
 "
+1x
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+dialog
+-
+warning
+?
+size
+=
+48
+&
+scale
+=
+2
+"
+2x
 )
 ;
 }
