--- a/layout/forms/test/test_bug717878_input_scroll.html
+++ b/layout/forms/test/test_bug717878_input_scroll.html
@@ -697,7 +697,7 @@ element
 scrollMax
 ]
 ;
-is
+isfuzzy
 (
 element
 [
@@ -707,6 +707,7 @@ element
 [
 scrollMax
 ]
+1
 element
 .
 id
@@ -733,7 +734,7 @@ scrollMax
 +
 10
 ;
-is
+isfuzzy
 (
 element
 [
@@ -743,6 +744,7 @@ element
 [
 scrollMax
 ]
+1
 element
 .
 id
