--- a/layout/base/tests/test_bug583889.html
+++ b/layout/base/tests/test_bug583889.html
@@ -227,6 +227,47 @@ event
 .
 yield
 ;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+layout
+.
+scroll
+.
+disable
+-
+pixel
+-
+alignment
+"
+true
+]
+]
+}
+)
+.
+then
+(
+grabEventAndGo
+)
+;
+/
+/
+Wait
+for
+the
+pref
+change
+.
+yield
+;
 var
 inner
 =
