--- a/devtools/client/inspector/rules/test/doc_copystyles.css
+++ b/devtools/client/inspector/rules/test/doc_copystyles.css
@@ -64,14 +64,14 @@ testid
 color
 :
 #
-F00
+f00
 ;
 background
 -
 color
 :
 #
-00F
+00f
 ;
 font
 -
@@ -84,7 +84,7 @@ border
 color
 :
 #
-00F
+00f
 !
 important
 ;
