Bug 1967635 - Allow 1px difference in test_frame_reconstruction_scroll_restore.html. r=dholbert
Differential Revision: https://phabricator.services.mozilla.com/D250377

UltraBlame original commit: e48236febef5a2c2dc47e810f35376ce6218b6e3

--- a/layout/base/tests/test_frame_reconstruction_scroll_restore.html
+++ b/layout/base/tests/test_frame_reconstruction_scroll_restore.html
@@ -358,7 +358,7 @@ scrollTopMax
 ;
 SimpleTest
 .
-is
+isfuzzy
 (
 document
 .
@@ -366,6 +366,7 @@ body
 .
 scrollTop
 reducedMax
+1
 Scroll
 forced
 to
@@ -435,7 +436,7 @@ height
 ;
 SimpleTest
 .
-is
+isfuzzy
 (
 document
 .
@@ -443,6 +444,7 @@ body
 .
 scrollTop
 reducedMax
+1
 "
 Scroll
 remained
