Bug 1967517 - Added engine enablement changes to choose what to sync telemetry r=skhamis,settings-reviewers,mossop
Differential Revision: https://phabricator.services.mozilla.com/D250567

UltraBlame original commit: 7a53b59c484fe8bf39d51e310ada3eea8fdb5e66

--- a/browser/components/preferences/dialogs/syncChooseWhatToSync.xhtml
+++ b/browser/components/preferences/dialogs/syncChooseWhatToSync.xhtml
@@ -383,6 +383,11 @@ bookmarks
 >
 <
 checkbox
+id
+=
+"
+syncEngineBookmarks
+"
 data
 -
 l10n
@@ -431,6 +436,11 @@ history
 >
 <
 checkbox
+id
+=
+"
+syncEngineHistory
+"
 data
 -
 l10n
@@ -479,6 +489,11 @@ tabs
 >
 <
 checkbox
+id
+=
+"
+syncEngineTabs
+"
 data
 -
 l10n
@@ -527,6 +542,11 @@ passwords
 >
 <
 checkbox
+id
+=
+"
+syncEnginePasswords
+"
 data
 -
 l10n
@@ -575,6 +595,11 @@ addresses
 >
 <
 checkbox
+id
+=
+"
+syncEngineAddresses
+"
 data
 -
 l10n
@@ -623,6 +648,11 @@ creditcards
 >
 <
 checkbox
+id
+=
+"
+syncEngineCreditcards
+"
 data
 -
 l10n
@@ -673,6 +703,11 @@ addons
 >
 <
 checkbox
+id
+=
+"
+syncEngineAddons
+"
 data
 -
 l10n
@@ -721,6 +756,11 @@ prefs
 >
 <
 checkbox
+id
+=
+"
+syncEnginePrefs
+"
 data
 -
 l10n
